<resources>
    <string name="app_name">Metrostate\nMobile</string>
    <string name="action_settings">Settings</string>
    <string name="gateway">Gateway</string>
    <string name="campus_directory">Directory</string>
    <string name="news">News</string>
    <string name="it_services">IT Services</string>
    <string name="events">Events</string>
    <string name="library">Library</string>
    <string name="maps">Maps</string>
    <string name="d2l">D2L</string>
    <string name="portal">Portal</string>
    <string name="eservices">eServices</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="linkedIn">LinkedIn</string>
    <string name="hours">8 A.M. - 7 P.M. Monday-Thursday\n8 A.M. - 5 P.M. Friday\n8 A.M. - 1 P.M. Saturday\nClosed Sunday</string>
    <string name="libraryAddress">654 E 7th Street\nSaint Paul, Minnesota 55106</string>
    <string name="libraryWebsiteLink"><a href="http://www.metrostate.edu/student/learning-resources/learning-resources/library-and-information-services">Visit Full Website</a></string>
    <string name="title_activity_directory_page">DirectoryPage</string>
    <string name="title_activity_gateway_page">GatewayPage</string>
    <string name="title_activity_helpdesk_page">HelpdeskPage</string>
    <string name="title_activity_events_page">EventsPage</string>
    <string name="title_activity_library_page">LibraryPage</string>
    <string name="title_activity_maps_page">MapsPage</string>
    <string name="title_activity_gateway">GatewayActivity</string>
    <string name="title_activity_directory">DirectoryActivity</string>
    <string name="title_activity_helpdesk">Information Technology</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_d2_l">D2LActivity</string>
    <string name="title_activity_d2lactivity">d2lactivity</string>
    <string name="title_activity_d2l">D2lActivity</string>
    <string name="title_activity_portal">PortalActivity</string>
    <string name="title_activity_eservices">EservicesActivity</string>
    <string name="gateway_header_text">Gateway Services Main Office</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="title_activity_twtitter">TwtitterActivity</string>
    <string name="title_activity_linked_in">LinkedInActivity</string>
    <string name="title_activity_news">NewsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_web_viewer">WebViewerActivity</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="nmetrostate_mobile_app">Metrostate Mobile App</string>
</resources>
