<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.russwilkie.metrostatemobile.fragments.PrimaryMenuFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.russwilkie.metrostatemobile.activities.MainActivity">

        <ImageButton
            android:id="@+id/portalIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_portal"
            android:layout_marginTop="49dp"
            app:layout_constraintTop_toBottomOf="@+id/libraryIcon"
            app:layout_constraintLeft_toRightOf="@+id/d2lIcon"
            android:layout_marginLeft="59dp"
            android:onClick="openPortalActivity"
            android:layout_marginStart="59dp" />

        <TextView
            android:id="@+id/portalLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:text="@string/portal"
            app:layout_constraintLeft_toRightOf="@+id/d2lLink"
            app:layout_constraintTop_toBottomOf="@+id/portalIcon"
            tools:text="@string/portal"
            android:layout_marginStart="100dp" />

        <ImageButton
            android:id="@+id/d2lIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_d2l"
            android:layout_marginTop="49dp"
            android:onClick="openD2lActivity"
            app:layout_constraintTop_toBottomOf="@+id/eventsIcon"
            android:layout_marginLeft="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="25dp" />

        <TextView
            android:id="@+id/d2lLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="49dp"
            android:layout_marginTop="10dp"
            android:text="@string/d2l"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d2lIcon"
            tools:text="@string/d2l"
            android:layout_marginStart="49dp" />
        <TextView
            android:id="@+id/eventsLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="10dp"
            android:text="@string/events"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventsIcon"
            tools:text="@string/events"
            android:layout_marginStart="39dp" />

        <ImageButton
            android:id="@+id/eventsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="49dp"
            android:backgroundTint="#0360a0"
            android:onClick="openEventsActivity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gatewayIcon"
            app:srcCompat="@mipmap/ic_calendar"
            android:layout_marginStart="25dp" />

        <ImageButton
            android:id="@+id/newsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="59dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="#0360a0"
            android:onClick="openNewsActivity"
            app:layout_constraintLeft_toRightOf="@+id/gatewayIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_news"
            android:layout_marginStart="59dp" />

        <TextView
            android:id="@+id/newsLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="10dp"
            android:text="@string/news"
            app:layout_constraintLeft_toRightOf="@+id/gatewayLink"
            app:layout_constraintTop_toBottomOf="@+id/newsIcon"
            tools:text="@string/news"
            android:layout_marginStart="85dp" />

        <ImageButton
            android:id="@+id/gatewayIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="100dp"
            android:onClick="openGatewayActivity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_gateway"
            android:layout_marginStart="25dp" />

        <TextView
            android:id="@+id/gatewayLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/gateway"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gatewayIcon"
            tools:text="@string/gateway"
            android:layout_marginStart="35dp" />

        <ImageButton
            android:id="@+id/itservicesIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="59dp"
            android:layout_marginTop="100dp"
            android:onClick="openHelpdeskActivity"
            android:backgroundTint="#0360a0"
            app:layout_constraintLeft_toRightOf="@+id/newsIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_computer"
            android:layout_marginStart="59dp" />

        <TextView
            android:id="@+id/itservicesLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:text="@string/it_services"
            app:layout_constraintLeft_toRightOf="@+id/newsLink"
            app:layout_constraintTop_toBottomOf="@+id/itservicesIcon"
            tools:text="@string/it_services" />

        <ImageButton
            android:id="@+id/libraryIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="59dp"
            android:layout_marginTop="22dp"
            android:onClick="openLibraryActivity"
            android:backgroundTint="#0360a0"
            app:layout_constraintLeft_toRightOf="@+id/eventsIcon"
            app:layout_constraintTop_toBottomOf="@+id/newsLink"
            app:srcCompat="@mipmap/ic_book"
            android:layout_marginStart="59dp" />

        <TextView
            android:id="@+id/libraryLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="10dp"
            android:text="@string/library"
            app:layout_constraintLeft_toRightOf="@+id/eventsLink"
            app:layout_constraintTop_toBottomOf="@+id/libraryIcon"
            tools:text="@string/library"
            android:layout_marginStart="85dp" />

        <ImageButton
            android:id="@+id/mapsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="59dp"
            android:layout_marginTop="49dp"
            android:onClick="openMapsActivity"
            android:backgroundTint="#0360a0"
            app:layout_constraintLeft_toRightOf="@+id/libraryIcon"
            app:layout_constraintTop_toBottomOf="@+id/itservicesIcon"
            app:srcCompat="@mipmap/ic_map"
            android:layout_marginStart="59dp" />

        <TextView
            android:id="@+id/mapsLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="97dp"
            android:layout_marginTop="10dp"
            android:text="@string/maps"
            app:layout_constraintLeft_toRightOf="@+id/libraryLink"
            app:layout_constraintTop_toBottomOf="@+id/mapsIcon"
            tools:text="@string/maps"
            android:layout_marginStart="97dp" />

        <ImageButton
            android:id="@+id/eservicesIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="59dp"
            android:layout_marginTop="49dp"
            android:onClick="openEservicesActivity"
            app:layout_constraintLeft_toRightOf="@+id/portalIcon"
            app:layout_constraintTop_toBottomOf="@+id/mapsIcon"
            app:srcCompat="@mipmap/ic_eservices"
            android:layout_marginStart="59dp" />

        <TextView
            android:id="@+id/eservicesLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:text="@string/eservices"
            app:layout_constraintLeft_toRightOf="@+id/portalLink"
            app:layout_constraintTop_toBottomOf="@+id/eservicesIcon"
            tools:text="@string/eservices"
            android:layout_marginStart="80dp" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
