<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.russwilkie.metrostatemobile.fragments.SecondaryMenuFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.russwilkie.metrostatemobile.activities.MainActivity">


        <ImageButton
            android:id="@+id/twitterIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="59dp"
            android:layout_marginTop="100dp"
            android:onClick="openTwitterPage"
            app:layout_constraintLeft_toRightOf="@+id/facebookIcon"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="#0360a0"
            app:srcCompat="@mipmap/ic_twitter"
            android:layout_marginStart="59dp" />

        <TextView
            android:id="@+id/twitterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="10dp"
            android:text="@string/twitter"
            app:layout_constraintLeft_toRightOf="@+id/facebookLink"
            app:layout_constraintTop_toBottomOf="@+id/twitterIcon"
            tools:text="@string/twitter"
            android:layout_marginStart="75dp" />

        <ImageButton
            android:id="@+id/facebookIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="100dp"
            android:onClick="openFacebookPage"
            android:backgroundTint="#0360a0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_facebook"
            android:layout_marginStart="25dp" />

        <TextView
            android:id="@+id/facebookLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/facebook"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facebookIcon"
            tools:text="@string/facebook"
            android:layout_marginStart="30dp" />

        <ImageButton
            android:id="@+id/linkedinIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="59dp"
            android:layout_marginTop="100dp"
            android:onClick="openLinkedinPage"
            android:backgroundTint="#0360a0"
            app:layout_constraintLeft_toRightOf="@+id/twitterIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_linkedin"
            android:layout_marginStart="59dp" />

        <TextView
            android:id="@+id/linkedinLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="10dp"
            android:text="@string/linkedIn"
            app:layout_constraintLeft_toRightOf="@+id/twitterLink"
            app:layout_constraintTop_toBottomOf="@+id/linkedinIcon"
            tools:text="@string/linkedIn"
            android:layout_marginStart="85dp" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
